# picosynth

./: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  audio_task.c  audio_task.h  i2s.pio  log_task.c  log_task.h  main.c  midi_task.c  midi_task.h  project-config.json  sine.h
src/: FreeRTOSConfig.h  app_config.h  audio_task.c  audio_task.h  i2s.c  i2s.h  log_task.c  main.c  main_blinky.c  midi_parser.c  midi_parser.h  midi_task.c  midi_task.h  synth_engine.c  synth_engine.h
